<resources>
    <string name="action_settings">Settings</string>
    <string name="action_dialpad">Dialpad</string>
    <string name="action_accounts">Manage accounts</string>
    <string name="action_account">Manage account</string>
    <string name="action_archive_chat">Archive chat</string>
    <string name="select_chats">Select chats</string>
    <string name="select_all">Select all</string>
    <string name="search_mode_messages">Messages</string>
    <string name="search_mode_chats">Chats</string>
    <string name="archive_selected">Archive</string>
    <string name="archive_chats">Archive chats</string>
    <plurals name="x_chats">
        <item quantity="one">%d chat</item>
        <item quantity="other">%d chats</item>
    </plurals>
    <plurals name="archive_chats_dialog_msg">
        <item quantity="one">Do you want to archive %1$d chat?\n\nIt will be removed from the chat list but its history will be kept.</item>
        <item quantity="other">Do you want to archive %1$d chats?\n\nThey will be removed from the chat list but their history will be kept.</item>
    </plurals>
    <string name="action_contact_details">Contact details</string>
    <string name="action_muc_details">Group chat details</string>
    <string name="channel_details">Channel details</string>
    <string name="action_add_account">Add account</string>
    <string name="action_edit_contact">Edit name</string>
    <string name="action_delete_contact">Delete from roster</string>
    <string name="action_block_contact">Block contact</string>
    <string name="action_unblock_contact">Unblock contact</string>
    <string name="action_block_domain">Block domain</string>
    <string name="action_unblock_domain">Unblock domain</string>
    <string name="action_block_participant">Block participant</string>
    <string name="action_unblock_participant">Unblock participant</string>
    <string name="title_activity_manage_accounts">Manage Accounts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_share_with">Share with…</string>
    <string name="title_activity_choose_contact">Choose Contact</string>
    <string name="share_with">Share with…</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="pref_general">General</string>
    <string name="pref_accept_files">Accept files</string>
    <string name="pref_accept_files_summary">Automatically accept files smaller than…</string>
    <string name="pref_attachments">Attachments</string>
    <string name="pref_notification_settings">Notification</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_summary">Vibrate when a new message arrives</string>
    <string name="pref_led">LED Notification</string>
    <string name="pref_led_summary">Blink notification light when a new message arrives</string>
    <string name="pref_notification_grace_period">Grace Period</string>
    <string name="pref_notification_grace_period_summary">The length of time notifications are silenced after detecting activity on one of your other devices.</string>
    <string name="pref_advanced_options">Advanced</string>
    <string name="pref_never_send_crash_summary">By sending in stack traces you are helping the development</string>
    <string name="pref_confirm_messages">Read receipts</string>
    <string name="pref_confirm_messages_summary">When enabled, your contacts will see when you’ve read their messages.</string>
    <string name="pref_ui_options">UI</string>
    <string name="pref_security_settings">Security</string>
    <string name="pref_allow_message_correction">Message edits</string>
    <string name="pref_allow_message_correction_summary">Allow your contacts to retroactively edit their messages</string>
    <string name="pref_expert_options">Expert settings</string>
    <string name="pref_expert_options_summary">Please be careful with these</string>
    <string name="title_pref_quiet_hours">Quiet Hours</string>
    <string name="title_pref_quiet_hours_start_time">Start time</string>
    <string name="title_pref_quiet_hours_end_time">End time</string>
    <string name="title_pref_enable_quiet_hours">Enable quiet hours</string>
    <string name="pref_quiet_hours_summary">Notifications will be silenced during quiet hours</string>
    <string name="pref_expert_options_other">Other</string>
    <string name="pref_autojoin">Synchronize bookmarks</string>
    <string name="pref_autojoin_summary">Set “autojoin” flag when entering or leaving a MUC and react to modifications made by other clients.</string>
    <string name="quote">Quote</string>
    <string name="copy_original_url">Copy original URL</string>
    <string name="send_again">Send again</string>
    <string name="pref_keep_foreground_service">Foreground service</string>
    <string name="pref_keep_foreground_service_summary">Prevents the operating system from killing your connection</string>
    <string name="download_x_file">Download %s</string>
    <string name="delete_x_file">Delete %s</string>
    <string name="cancel_transmission">Cancel transmission</string>
    <string name="pref_show_dynamic_tags">Dynamic Tags</string>
    <string name="pref_show_dynamic_tags_summary">Display read-only tags underneath contacts</string>
    <string name="pref_input_options">Input</string>
    <string name="pref_enter_is_send">Enter is send</string>
    <string name="pref_enter_is_send_summary">Use Enter key to send message. You can always use Ctrl+Enter to send message, even if this option is disabled.</string>
    <string name="pref_display_enter_key">Show enter key</string>
    <string name="pref_display_enter_key_summary">Change the emoticons key to an enter key</string>
    <string name="pref_chat_states">Typing notifications</string>
    <string name="pref_chat_states_summary">Let your contacts know when you are writing messages to them</string>
    <string name="pref_dont_trust_system_cas_title">Don’t trust system CAs</string>
    <string name="pref_dont_trust_system_cas_summary">All certificates must be manually approved</string>
    <string name="pref_remove_trusted_certificates_title">Remove certificates</string>
    <string name="pref_remove_trusted_certificates_summary">Delete manually approved certificates</string>
    <string name="pref_quick_action_summary">Replace “Send” button with quick action</string>
    <string name="pref_quick_action">Quick Action</string>
    <string name="choose_quick_action">Choose quick action</string>
    <string name="pref_presence_settings">Availability</string>
    <string name="pref_away_when_screen_off">Away when device is locked</string>
    <string name="pref_away_when_screen_off_summary">Show as Away when the device is locked</string>
    <string name="pref_dnd_on_silent_mode">Busy in silent mode</string>
    <string name="pref_dnd_on_silent_mode_summary">Show as Busy when device is in silent mode</string>
    <string name="pref_treat_vibrate_as_silent">Treat vibrate as silent mode</string>
    <string name="pref_treat_vibrate_as_dnd_summary">Show as Busy when device is on vibrate</string>
    <string name="pref_show_connection_options">Hostname &amp; Port</string>
    <string name="pref_show_connection_options_summary">Show extended connection settings when setting up an account</string>
    <string name="pref_connection_options">Connection</string>
    <string name="pref_use_tor">Connect via Tor</string>
    <string name="pref_use_tor_summary">Tunnel all connections through the Tor network. Requires Orbot</string>
    <string name="pref_picture_compression">Image Compression</string>
    <string name="pref_picture_compression_summary">Hint: Use ‘Choose file’ instead of ‘Choose picture’ to send individual images uncompressed regardless of this setting.</string>
    <string name="correct_message">Edit</string>
    <string name="pref_manually_change_presence">Manage availability manually</string>
    <string name="pref_manually_change_presence_summary">Set your availability when editing your status message.</string>
    <string name="pref_broadcast_last_activity">Show last seen</string>
    <string name="pref_broadcast_last_activity_summary">Let your contacts see the time you were last active in the app</string>
    <string name="pref_privacy">Privacy</string>
    <string name="pref_theme_options">Theme</string>
    <string name="pref_theme_options_summary">Select the color palette</string>
    <string name="pref_use_colorful_bubbles">Colorful chat bubbles</string>
    <string name="pref_use_colorful_bubbles_summary">Distinct background colors for sent and received messages</string>
    <string name="pref_delete_omemo_identities">Delete OMEMO identities</string>
    <string name="pref_delete_omemo_identities_summary">Regenerate your OMEMO keys. All your contacts will have to verify you again. Only use this as a last resort.</string>
    <string name="show_error_message">Show error message</string>
    <string name="pref_blind_trust_before_verification">Blind Trust Before Verification</string>
    <string name="pref_blind_trust_before_verification_summary">Trust new devices from non-verified contacts, but prompt manual confirmation of new devices for verified contacts.</string>
    <string name="pref_clean_cache_summary">Clean cache folder (used by camera app)</string>
    <string name="pref_clean_cache">Clean cache</string>
    <string name="pref_clean_private_storage">Clean private storage</string>
    <string name="pref_clean_private_storage_summary">Clean private storage where files are kept (They can be re-downloaded from the server)</string>
    <string name="pref_automatically_delete_messages">Automatic message deletion</string>
    <string name="pref_automatically_delete_messages_description">Automatically delete messages from this device that are older than the configured time frame.</string>
    <string name="pref_notifications_from_strangers">Notifications from strangers</string>
    <string name="pref_notifications_from_strangers_summary">Notify for messages and calls received from strangers.</string>
    <string name="retry_decryption">Retry decryption</string>
    <string name="pref_headsup_notifications">Heads-up Notifications</string>
    <string name="pref_headsup_notifications_summary">Show heads-up notifications</string>
    <string name="pref_validate_hostname">Validate hostname with DNSSEC</string>
    <string name="pref_validate_hostname_summary">Server certificates that contain the validated hostname are considered verified</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="pref_scroll_to_bottom">Scroll to bottom</string>
    <string name="pref_scroll_to_bottom_summary">Scroll down after sending a message</string>
    <string name="pref_dynamic_colors">Dynamic colors</string>
    <string name="pref_dynamic_colors_summary">System colors (Material You)</string>
    <string name="copy_link">Copy web address</string>
    <string name="pref_start_search">Direct Search</string>
    <string name="pref_start_search_summary">At ‘New chat’ screen open keyboard and place cursor in search field</string>
    <string name="open_with">Open with…</string>
    <string name="pref_notifications_summary">Grace period, Ringtone, Vibration, Strangers</string>
    <string name="appearance">Appearance</string>
    <string name="pref_light_dark_mode">Light/dark mode</string>
    <string name="pref_allow_screenshots">Allow screenshots</string>
    <string name="pref_allow_screenshots_summary">Show app content in app switcher and allow screenshots to be taken</string>
    <string name="pref_category_operating_system">Operating System</string>
    <string name="pref_keyboard_options">Keyboard</string>
    <string name="pref_large_font">Large font</string>
    <string name="pref_large_font_summary">Increase font size in message bubbles</string>
</resources>