<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    android:key="main_screen"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="?attr/color_background_secondary">

    <PreferenceCategory android:title="@string/pref_general"
        android:key="general">
        <PreferenceScreen
            android:key="huawei"
            android:title="@string/huawei_protected_apps"
            android:summary="@string/huawei_protected_apps_summary"
            >
            <intent
                android:targetPackage="com.huawei.systemmanager"
                android:targetClass="com.huawei.systemmanager.optimize.process.ProtectActivity"/>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_privacy">
        <CheckBoxPreference
            android:defaultValue="@bool/confirm_messages"
            android:key="confirm_messages"
            android:summary="@string/pref_confirm_messages_summary"
            android:title="@string/pref_confirm_messages"/>

        <CheckBoxPreference
            android:defaultValue="@bool/chat_states"
            android:key="chat_states"
            android:summary="@string/pref_chat_states_summary"
            android:title="@string/pref_chat_states"/>
        <CheckBoxPreference
            android:defaultValue="@bool/last_activity"
            android:key="last_activity"
            android:title="@string/pref_broadcast_last_activity"
            android:summary="@string/pref_broadcast_last_activity_summary"/>
        </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_notification_settings">
        <CheckBoxPreference
            android:defaultValue="@bool/show_notification"
            android:key="show_notification"
            android:summary="@string/pref_notifications_summary"
            android:title="@string/pref_notifications"/>
        <CheckBoxPreference
            android:defaultValue="@bool/notifications_from_strangers"
            android:key="notifications_from_strangers"
            android:dependency="show_notification"
            android:title="@string/pref_notifications_from_strangers"
            android:summary="@string/pref_notifications_from_strangers_summary"/>
        <CheckBoxPreference
            android:defaultValue="@bool/headsup_notifications"
            android:dependency="show_notification"
            android:key="notification_headsup"
            android:title="@string/pref_headsup_notifications"
            android:summary="@string/pref_headsup_notifications_summary"/>
        <CheckBoxPreference
            android:defaultValue="@bool/vibrate_on_notification"
            android:dependency="show_notification"
            android:key="vibrate_on_notification"
            android:summary="@string/pref_vibrate_summary"
            android:title="@string/pref_vibrate"/>
        <CheckBoxPreference
            android:defaultValue="@bool/led"
            android:dependency="show_notification"
            android:key="led"
            android:title="@string/pref_led"
            android:summary="@string/pref_led_summary"/>
        <RingtonePreference
            android:defaultValue="@string/notification_ringtone"
            android:dependency="show_notification"
            android:key="notification_ringtone"
            android:ringtoneType="notification"
            android:summary="@string/pref_sound_summary"
            android:title="@string/pref_sound"/>
        <PreferenceScreen
            android:dependency="show_notification"
            android:key="quiet_hours"
            android:summary="@string/pref_quiet_hours_summary"
            android:title="@string/title_pref_quiet_hours">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="@string/applicationId"
                android:targetClass="eu.siacs.conversations.ui.SettingsActivity" >
                <extra android:name="page" android:value="quiet_hours" />
            </intent>
            <CheckBoxPreference
                android:defaultValue="@bool/enable_quiet_hours"
                android:key="enable_quiet_hours"
                android:summary="@string/pref_quiet_hours_summary"
                android:title="@string/title_pref_enable_quiet_hours"/>
            <eu.siacs.conversations.ui.TimePreference
                android:dependency="enable_quiet_hours"
                android:key="quiet_hours_start"
                android:negativeButtonText="@string/cancel"
                android:positiveButtonText="@string/set"
                android:title="@string/title_pref_quiet_hours_start_time"/>
            <eu.siacs.conversations.ui.TimePreference
                android:dependency="enable_quiet_hours"
                android:key="quiet_hours_end"
                android:negativeButtonText="@string/cancel"
                android:positiveButtonText="@string/set"
                android:title="@string/title_pref_quiet_hours_end_time"/>
        </PreferenceScreen>
        <ListPreference
            android:dependency="show_notification"
            android:key="grace_period_length"
            android:title="@string/pref_notification_grace_period"
            android:summary="@string/pref_notification_grace_period_summary"
            android:defaultValue="@integer/grace_period"
            android:entries="@array/grace_periods"
            android:entryValues="@array/grace_periods_values"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_attachments">
        <ListPreference
            android:defaultValue="@integer/auto_accept_filesize"
            android:entries="@array/filesizes"
            android:entryValues="@array/filesizes_values"
            android:key="auto_accept_file_size"
            android:summary="@string/pref_accept_files_summary"
            android:title="@string/pref_accept_files"/>
        <ListPreference
            android:defaultValue="@string/picture_compression"
            android:entries="@array/picture_compression_entries"
            android:entryValues="@array/picture_compression_values"
            android:key="picture_compression"
            android:summary="@string/pref_picture_compression_summary"
            android:title="@string/pref_picture_compression"/>
        <CheckBoxPreference
            android:defaultValue="@bool/return_to_previous"
            android:key="return_to_previous"
            android:title="@string/pref_return_to_previous"
            android:summary="@string/pref_return_to_previous_summary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_ui_options">
        <ListPreference
            android:defaultValue="@string/theme"
            android:entries="@array/themes"
            android:entryValues="@array/themes_values"
            android:key="theme"
            android:summary="@string/pref_theme_options_summary"
            android:title="@string/pref_theme_options"/>
        <CheckBoxPreference
            android:defaultValue="@bool/use_subject"
            android:key="use_subject"
            android:summary="@string/pref_conference_name_summary"
            android:title="@string/pref_conference_name"/>
        <CheckBoxPreference
            android:defaultValue="@bool/use_green_background"
            android:key="use_green_background"
            android:summary="@string/pref_use_green_background_summary"
            android:title="@string/pref_use_green_background"/>
        <CheckBoxPreference
            android:defaultValue="@bool/use_larger_font"
            android:key="use_larger_font"
            android:summary="@string/pref_use_larger_font_summary"
            android:title="@string/pref_use_larger_font"/>
        <CheckBoxPreference
            android:defaultValue="@bool/send_button_status"
            android:key="send_button_status"
            android:summary="@string/pref_use_send_button_to_indicate_status_summary"
            android:title="@string/pref_use_send_button_to_indicate_status"/>
        <ListPreference
            android:defaultValue="@string/quick_action"
            android:dialogTitle="@string/choose_quick_action"
            android:entries="@array/quick_actions"
            android:entryValues="@array/quick_action_values"
            android:key="quick_action"
            android:summary="@string/pref_quick_action_summary"
            android:title="@string/pref_quick_action"/>
        <CheckBoxPreference
            android:defaultValue="@bool/show_dynamic_tags"
            android:key="show_dynamic_tags"
            android:summary="@string/pref_show_dynamic_tags_summary"
            android:title="@string/pref_show_dynamic_tags"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="advanced"
        android:title="@string/pref_advanced_options">
        <PreferenceScreen
            android:key="expert"
            android:summary="@string/pref_expert_options_summary"
            android:title="@string/pref_expert_options">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="@string/applicationId"
                android:targetClass="eu.siacs.conversations.ui.SettingsActivity" >
                <extra android:name="page" android:value="expert" />
            </intent>
            <PreferenceCategory android:title="@string/pref_security_settings"
                android:key="security_options">
                <CheckBoxPreference
                    android:defaultValue="@bool/btbv"
                    android:key="btbv"
                    android:title="@string/pref_blind_trust_before_verification"
                    android:summary="@string/pref_blind_trust_before_verification_summary"/>
                <ListPreference
                    android:key="automatic_message_deletion"
                    android:title="@string/pref_automatically_delete_messages"
                    android:summary="@string/pref_automatically_delete_messages_description"
                    android:defaultValue="@integer/automatic_message_deletion"
                    android:entries="@array/automatic_message_deletion"
                    android:entryValues="@array/automatic_message_deletion_values" />
                <CheckBoxPreference
                    android:defaultValue="@bool/dont_trust_system_cas"
                    android:key="dont_trust_system_cas"
                    android:summary="@string/pref_dont_trust_system_cas_summary"
                    android:title="@string/pref_dont_trust_system_cas_title"/>
                <CheckBoxPreference
                    android:defaultValue="@bool/validate_hostname"
                    android:key="validate_hostname"
                    android:summary="@string/pref_validate_hostname_summary"
                    android:title="@string/pref_validate_hostname"/>
                <Preference
                    android:key="remove_trusted_certificates"
                    android:summary="@string/pref_remove_trusted_certificates_summary"
                    android:title="@string/pref_remove_trusted_certificates_title"/>
                <CheckBoxPreference
                    android:defaultValue="@bool/allow_message_correction"
                    android:key="allow_message_correction"
                    android:title="@string/pref_allow_message_correction"
                    android:summary="@string/pref_allow_message_correction_summary"/>
                <Preference
                    android:key="clean_cache"
                    android:summary="@string/pref_clean_cache_summary"
                    android:title="@string/pref_clean_cache"/>
                <Preference
                    android:key="clean_private_storage"
                    android:summary="@string/pref_clean_private_storage_summary"
                    android:title="@string/pref_clean_private_storage"/>
                <Preference
                    android:key="delete_omemo_identities"
                    android:title="@string/pref_delete_omemo_identities"
                    android:summary="@string/pref_delete_omemo_identities_summary"/>
            </PreferenceCategory>
            <PreferenceCategory
                android:key="connection_options"
                android:title="@string/pref_connection_options">
                <CheckBoxPreference
                    android:defaultValue="@bool/use_tor"
                    android:key="use_tor"
                    android:summary="@string/pref_use_tor_summary"
                    android:title="@string/pref_use_tor"/>
                <CheckBoxPreference
                    android:defaultValue="@bool/show_connection_options"
                    android:key="show_connection_options"
                    android:summary="@string/pref_show_connection_options_summary"
                    android:title="@string/pref_show_connection_options"/>
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_input_options">
                <CheckBoxPreference
                    android:defaultValue="@bool/enter_is_send"
                    android:key="enter_is_send"
                    android:summary="@string/pref_enter_is_send_summary"
                    android:title="@string/pref_enter_is_send"/>
                <CheckBoxPreference
                    android:defaultValue="@bool/display_enter_key"
                    android:key="display_enter_key"
                    android:summary="@string/pref_display_enter_key_summary"
                    android:title="@string/pref_display_enter_key"/>
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_presence_settings">
                <CheckBoxPreference
                    android:defaultValue="@bool/manually_change_presence"
                    android:key="manually_change_presence"
                    android:title="@string/pref_manually_change_presence"
                    android:summary="@string/pref_manually_change_presence_summary"
                    android:disableDependentsState="true"/>
                <CheckBoxPreference
                    android:defaultValue="@bool/away_when_screen_off"
                    android:key="away_when_screen_off"
                    android:summary="@string/pref_away_when_screen_off_summary"
                    android:title="@string/pref_away_when_screen_off"
                    android:dependency="manually_change_presence"/>
                <CheckBoxPreference
                    android:defaultValue="@bool/dnd_on_silent_mode"
                    android:key="dnd_on_silent_mode"
                    android:summary="@string/pref_dnd_on_silent_mode_summary"
                    android:title="@string/pref_dnd_on_silent_mode"
                    android:dependency="manually_change_presence"/>
                <CheckBoxPreference
                    android:dependency="dnd_on_silent_mode"
                    android:defaultValue="@bool/treat_vibrate_as_silent"
                    android:key="treat_vibrate_as_silent"
                    android:title="@string/pref_treat_vibrate_as_silent"
                    android:summary="@string/pref_treat_vibrate_as_dnd_summary"/>
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_expert_options_other">
                <CheckBoxPreference
                    android:key="autojoin"
                    android:defaultValue="@bool/autojoin"
                    android:title="@string/pref_autojoin"
                    android:summary="@string/pref_autojoin_summary"
                    />
                <CheckBoxPreference
                    android:defaultValue="@bool/indicate_received"
                    android:key="indicate_received"
                    android:summary="@string/pref_use_indicate_received_summary"
                    android:title="@string/pref_use_indicate_received"/>
                <CheckBoxPreference
                    android:defaultValue="@bool/enable_foreground_service"
                    android:key="enable_foreground_service"
                    android:summary="@string/pref_keep_foreground_service_summary"
                    android:title="@string/pref_keep_foreground_service"/>
                <Preference
                    android:key="export_logs"
                    android:summary="@string/pref_export_logs_summary"
                    android:title="@string/pref_export_logs"/>
            </PreferenceCategory>
        </PreferenceScreen>

        <CheckBoxPreference
            android:defaultValue="@bool/never_send"
            android:key="never_send"
            android:summary="@string/pref_never_send_crash_summary"
            android:title="@string/pref_never_send_crash"/>
    </PreferenceCategory>
    <eu.siacs.conversations.ui.AboutPreference
        android:summary="@string/pref_about_conversations_summary"
        android:title="@string/title_activity_about"/>
</PreferenceScreen>
